--- a/Projeto.Site/Views/Livro/_Lista.cshtml
+++ b/Projeto.Site/Views/Livro/_Lista.cshtml
@@ -25,7 +25,7 @@
             <td>
                 @if (item.ImgLivro != null)
                 {
-                    <img src="@string.Format("data:image/png;base64,{0}", item.ImgLivro)" />
+                    <img src="@string.Format("data:image/png;base64,{0}", item.ImgLivro)" class="ImgLivro" />
                 }
             </td>            
             <td class="actions">
