--- a/Projeto.Site/Content/ItensSite/EstilosDoSite.css
+++ b/Projeto.Site/Content/ItensSite/EstilosDoSite.css
@@ -1,4 +1,4 @@
-﻿.loading {
+.loading {
     margin: 0;
     position: absolute;
     top: 50%;
@@ -21,9 +21,17 @@ input.error, textarea.error {
     border: 1px solid #ff0000;
     background-color: #FF0000;
 }
+
 .ImgLivro {
     max-width: 87px;
     max-height: 125px;
+    width: auto;
+    height: auto;
+}
+
+.ImgLoad {
+    max-width: 200px;
+    max-height: 163px;
     width: auto;
     height: auto;
 }
