--- a/Projeto.Site/Views/Livro/Index.cshtml
+++ b/Projeto.Site/Views/Livro/Index.cshtml
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="loading">
-        <img src="~/Stuffs/loading-gif-transparent-10.gif" />
+        <img src="~/Stuffs/loading-gif-transparent-10.gif" class="ImgLoad"/>
     </div>
     <div class="container">
         <h3>Lista de livros </h3>
