--- a/Projeto.Site/Content/ItensSite/EstilosDoSite.css
+++ b/Projeto.Site/Content/ItensSite/EstilosDoSite.css
@@ -35,3 +35,11 @@ input.error, textarea.error {
     width: auto;
     height: auto;
 }
+th {
+    font-family: 'Sintony', sans-serif;
+}
+
+td {
+    font-family: 'Poppins', sans-serif;
+    font-size:13px;
+}
