--- a/Projeto.Site/Views/Livro/Index.cshtml
+++ b/Projeto.Site/Views/Livro/Index.cshtml
@@ -19,6 +19,7 @@
     <script src="~/Scripts/ItensSite/accounting.js"></script>
     <script src="~/Scripts/ItensSite/moment.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Sintony&display=swap" rel="stylesheet">
     <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Scripts/ItensSite/JsCabec.js"></script>
 </head>
