--- a/Projeto.Site/Views/Livro/Index.cshtml
+++ b/Projeto.Site/Views/Livro/Index.cshtml
@@ -6,7 +6,7 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>    
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,17 +14,18 @@
     <link href="~/Content/ItensSite/EstilosDoSite.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
     <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>    
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/ItensSite/accounting.js"></script>
     <script src="~/Scripts/ItensSite/moment.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Sintony&display=swap" rel="stylesheet">
     <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Scripts/ItensSite/JsCabec.js"></script>
 </head>
 <body>
     <div class="loading">
-        <img src="~/Stuffs/loading-gif-transparent-10.gif" />
+        <img src="~/Stuffs/loading-gif-transparent-10.gif" class="ImgLoad"/>
     </div>
     <div class="container">
         <h3>Lista de livros </h3>
